2005-10-13  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/metal/MetalComboBoxButton/constructors.java: 
	New test,
	* gnu/testlet/javax/swing/plaf/metal/MetalComboBoxButton/getComboBox.java: 
	New test,
	* gnu/testlet/javax/swing/plaf/metal/MetalComboBoxButton/getComboIcon.java: 
	New test,
	* gnu/testlet/javax/swing/plaf/metal/MetalComboBoxButton/isFocusTraversable.java: 
	New test,
	* gnu/testlet/javax/swing/plaf/metal/MetalComboBoxButton/isIconOnly.java: 
	New test,
	* gnu/testlet/javax/swing/plaf/metal/MetalComboBoxButton/setComboBox.java: 
	New test,
	* gnu/testlet/javax/swing/plaf/metal/MetalComboBoxButton/setComboIcon.java: 
	New test,
	* gnu/testlet/javax/swing/plaf/metal/MetalComboBoxButton/setEnabled.java: 
	New test,
	* gnu/testlet/javax/swing/plaf/metal/MetalComboBoxButton/setIconOnly.java: 
	New test.

2005-10-13  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/UIDefaults/getBoolean.java: 
	New test.

2005-10-12  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/text/AbstractDocument/ElementChange2.java:
	New test.

2005-10-12  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getDefaults.java
	(test): strengthened tests for FileView icons.

2005-10-12  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JFileChooser/accept.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/addChoosableFileFilter.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/constructors.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/getAccessory.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/getApproveButtonMnemonic.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/getApproveButtonText.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/getApproveButtonToolTipText.java: new test,
	* gnu/testlet/javax/swing/JFileChooser/getChoosableFileFilters.java: new test,