@@ -1,5 +1,16 @@
 2005-10-13  David Gilbert  <david.gilbert@object-refinery.com>
 
+	* gnu/testlet/javax/swing/plaf/metal/MetalToolTipUI/constructor.java:
+	New test,
+	* gnu/testlet/javax/swing/plaf/metal/MetalToolTipUI/createUI.java:
+	New test,
+	* gnu/testlet/javax/swing/plaf/metal/MetalToolTipUI/getAcceleratorString.java:
+	New test,
+	* gnu/testlet/javax/swing/plaf/metal/MetalToolTipUI/MyMetalToolTipUI.java:
+	New support class.
+
+2005-10-13  David Gilbert  <david.gilbert@object-refinery.com>
+
 	* gnu/testlet/javax/swing/plaf/metal/MetalComboBoxButton/constructors.java: 
 	New test,
 	* gnu/testlet/javax/swing/plaf/metal/MetalComboBoxButton/getComboBox.java: 
